fixed the footer to not overlap content

--- a/react-vite/src/components/Footer/Footer.css
+++ b/react-vite/src/components/Footer/Footer.css
@@ -5,10 +5,8 @@
     align-items: center;
     background-color: #f2f2f2;
     padding: 20px;
-    margin-top: 10px;
-    position: fixed;
+    margin-top: 2rem;
     width: 100%;
-    bottom: 0px;
 }
 
 .meet-the-devs {
